--- a/.github/workflows/sit.yml
+++ b/.github/workflows/sit.yml
@@ -19,7 +19,7 @@ jobs:
       - name: copy file  via ssh key
         uses: appleboy/scp-action@master
         with:
-          source: "//*"
+          source: "/*"
           host: ${{ secrets.HOST }}
           target: "/usr/src/zhoubichuan/sit/"
           port:  ${{ secrets.PORT }}
