--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#500E55",
-        "titleBar.activeBackground": "#701377",
-        "titleBar.activeForeground": "#FEFCFE"
+        "activityBar.background": "#3A0E7B",
+        "titleBar.activeBackground": "#5114AD",
+        "titleBar.activeForeground": "#FCFAFE"
     }
 }
