--- a/package.json
+++ b/package.json
@@ -1,71 +1,72 @@
 {
-    "name": "zhoubichuan",
-    "version": "1.1.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "scp:prod": "scp -r ./dist/* root@zhoubichuan.com:/usr/src/zhoubichuan/prod/",
-        "build": "run-p type-check \"build-only {@}\" --",
-        "preview": "vite preview",
-        "build-only": "vite build",
-        "type-check": "vue-tsc --build --force",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-        "lint:style": "stylelint --fix",
-        "format": "prettier --write",
-        "prepare": "husky"
-    },
-    "dependencies": {
-        "@amap/amap-jsapi-loader": "^1.0.1",
-        "@vueuse/components": "^13.4.0",
-        "@vueuse/core": "^13.4.0",
-        "axios": "^1.10.0",
-        "clipboard": "^2.0.11",
-        "element-plus": "^2.10.2",
-        "lodash-es": "^4.17.21",
-        "pinia": "^2.2.6",
-        "qiankun": "^2.10.16",
-        "qs": "^6.13.1",
-        "spark-md5": "^3.0.2",
-        "vite-plugin-qiankun": "^1.0.15",
-        "vue": "^3.5.13",
-        "vue-amap": "^0.5.10",
-        "vue-router": "^4.4.5"
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^19.8.1",
-        "@commitlint/config-conventional": "^19.8.1",
-        "@rushstack/eslint-patch": "^1.12.0",
-        "@tsconfig/node20": "^20.1.6",
-        "@types/lodash-es": "^4.17.12",
-        "@types/node": "^22.9.3",
-        "@types/postcss-pxtorem": "^6.1.0",
-        "@types/spark-md5": "^3.0.5",
-        "@vitejs/plugin-basic-ssl": "^2.0.0",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "@vitejs/plugin-vue-jsx": "^5.0.0",
-        "@vue/eslint-config-prettier": "^10.2.0",
-        "@vue/eslint-config-typescript": "^14.1.3",
-        "@vue/tsconfig": "^0.7.0",
-        "amfe-flexible": "^2.2.1",
-        "eslint": "^9.14.0",
-        "eslint-plugin-vue": "^9.30.0",
-        "husky": "^9.1.7",
-        "lint-staged": "^16.1.2",
-        "npm-run-all2": "^7.0.1",
-        "postcss-pxtorem": "^6.1.0",
-        "prettier": "^3.6.2",
-        "sass": "^1.83.0",
-        "sass-loader": "^16.0.4",
-        "stylelint": "^16.21.0",
-        "stylelint-config-recess-order": "^7.1.0",
-        "stylelint-config-standard-scss": "^15.0.1",
-        "typescript": "~5.6.3",
-        "unplugin-auto-import": "^19.3.0",
-        "unplugin-vue-components": "^28.7.0",
-        "vite": "^6.0.1",
-        "vite-plugin-vue-devtools": "^7.6.5",
-        "vite-plugin-zip-pack": "^1.2.4",
-        "vue-tsc": "^2.1.10"
-    }
+  "name": "zhoubichuan",
+  "version": "1.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "scp:prod": "scp -r ./dist/* root@zhoubichuan.com:/usr/src/zhoubichuan/prod/",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint:style": "stylelint --fix",
+    "format": "prettier --write",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "@vueuse/components": "^13.4.0",
+    "@vueuse/core": "^13.4.0",
+    "axios": "^1.10.0",
+    "clipboard": "^2.0.11",
+    "element-plus": "^2.10.2",
+    "lodash-es": "^4.17.21",
+    "pinia": "^2.2.6",
+    "qiankun": "^2.10.16",
+    "qs": "^6.13.1",
+    "spark-md5": "^3.0.2",
+    "vite-plugin-qiankun": "^1.0.15",
+    "vue": "^3.5.13",
+    "vue-amap": "^0.5.10",
+    "vue-router": "^4.4.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@rushstack/eslint-patch": "^1.12.0",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.9.3",
+    "@types/postcss-pxtorem": "^6.1.0",
+    "@types/spark-md5": "^3.0.5",
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue-jsx": "^5.0.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/tsconfig": "^0.7.0",
+    "amfe-flexible": "^2.2.1",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "npm-run-all2": "^7.0.1",
+    "postcss-pxtorem": "^6.1.0",
+    "prettier": "^3.6.2",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "stylelint": "^16.21.0",
+    "stylelint-config-recess-order": "^7.1.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "typescript": "~5.6.3",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.7.0",
+    "vite": "^6.0.1",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-vue-devtools": "^7.6.5",
+    "vite-plugin-zip-pack": "^1.2.4",
+    "vue-tsc": "^2.1.10"
+  }
 }
